# niho

./: Cargo.toml  README.md  default-dic.jsonl
dics/: default.jsonl  sile.jsonl
dictionaries/: default.jsonl
src/: converter.rs  dictionary.rs  lib.rs  main.rs  tokenizer.rs
