[package]
name = "niho"
version = "0.1.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A command-line tool for converting romanized Japanese text to Japanese characters"
homepage = "https://github.com/sile/niho"
repository = "https://github.com/sile/niho"
readme = "README.md"
categories = ["command-line-utilities", "text-processing"]

[dependencies]
noargs = "0.4.1"
nojson = "0.3.4"
orfail = "1.1.0"
